--- a/catalog.html
+++ b/catalog.html
@@ -273,7 +273,7 @@
 						<div class="inputList__list">
 							<div class="inputList__list__header" onclick="toggle_list('prices')">
 								<div class="inputList__list__header__title txt">Цена</div>
-								<div class="inputList__list__header__values txt"></div>
+								<div class="inputList__list__header__values txt">0 - 9999 ₽</div>
 								<div class="inputList__list__header__bg">
 									<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="#fff"/>
@@ -281,8 +281,10 @@
 								</div>
 							</div>
 							<div class="inputList__list__body">
-								<div class="inputList__list__body__search">
-									<input class="txt" type="text" name="inp_search_prices" title="inp-search_prices" placeholder="Поиск">
+								<div class="inputList__list__body__numbers">
+									<input class="txt" type="number" name="inp_num_min_price" placeholder="От" value="0">
+									<div class="inputList__list__body__numbers__separator"></div>
+									<input class="txt" type="number" name="inp_num_max_price" placeholder="До" value="9999">
 								</div>
 								<div class="inputList__list__body__points txt" id="inputList_points-prices">
 								</div>
@@ -294,7 +296,7 @@
 						<div class="inputList__list">
 							<div class="inputList__list__header" onclick="toggle_list('date')">
 								<div class="inputList__list__header__title txt">Год выпуска</div>
-								<div class="inputList__list__header__values txt"></div>
+								<div class="inputList__list__header__values txt">1800 - 2030</div>
 								<div class="inputList__list__header__bg">
 									<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="#fff"/>
@@ -302,11 +304,12 @@
 								</div>
 							</div>
 							<div class="inputList__list__body">
-								<div class="inputList__list__body__search">
-									<input class="txt" type="text" name="inp_search_date" title="inp-search_date" placeholder="Поиск">
+								<div class="inputList__list__body__numbers">
+									<input class="txt" type="number" name="inp_num_min_date" placeholder="От" value="1800">
+									<div class="inputList__list__body__numbers__separator"></div>
+									<input class="txt" type="number" name="inp_num_max_date" placeholder="До" value="2030">
 								</div>
-								<div class="inputList__list__body__points txt" id="inputList_points-date">
-								</div>
+								<button type="button" class="inputList__list__body__button txt" onclick="set_value_date()">Применить</button>
 							</div>
 						</div>
 					</div>
