--- a/game.html
+++ b/game.html
@@ -334,10 +334,18 @@
 										</g>
 									</svg>
 								</button>
-								<div class="videoIF__race">
-									<div class="videoIF__race__mouse"></div>
-									<div class="videoIF__race__value"></div>
+								<div class="videoIF__raceBlock">
+									<div class="videoIF__race__time txt">
+										<div class="videoIF__race__time__point videoIF__race__time__point_current">0:00</div>
+										<div class="videoIF__race__time__point videoIF__race__time__point_all">0:00</div>
+										<div class="videoIF__race__time__point videoIF__race__time__point_hover">0:00</div>
+									</div>
+									<div class="videoIF__race">
+										<div class="videoIF__race__mouse"></div>
+										<div class="videoIF__race__value"></div>
+									</div>
 								</div>
+								
 								<div class="videoIF__volume videoIF__volume_muted">
 									<svg class="_volume_muted" viewBox="0 -3 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
 										<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
