--- a/game.html
+++ b/game.html
@@ -440,27 +440,31 @@
 				</div>
 			</div>
             <div class="mainInfo__info mainInfo__info_loading loadingContent" id="game_info">
-				<div class="mainInfo__info__img">
-					<img src="" alt="" id="game_img_right">
-				</div>
-				<div class="mainInfo__info__smallDescription txt" id="game_smallDescription">
+				<div class="mainInfo__info__top">
+					<div class="mainInfo__info__img">
+						<img src="" alt="" id="game_img_right">
+					</div>
+					<div class="mainInfo__info__smallDescription txt" id="game_smallDescription">
 
-				</div>
-				<div class="mainInfo__info__category" id="game_categories">
-					${categoriesHTML}
-				</div>
-				<div class="mainInfo__info__about">
-					<div class="mainInfo__info__about__point txt">
-						<div class="mainInfo__info__about__point__key">Дата выхода:</div>
-						<div class="mainInfo__info__about__point__value" id="game_date">15 авг. 2013 г.</div>
 					</div>
-					<div class="mainInfo__info__about__point txt">
-						<div class="mainInfo__info__about__point__key">Разработчик:</div>
-						<a href="#" class="mainInfo__info__about__point__value mainInfo__info__about__point__value_link txt" id="game_developer">Gaijin Entertainment</a>
+				</div>
+				<div class="mainInfo__info__bottom">
+					<div class="mainInfo__info__category" id="game_categories">
+					
 					</div>
-					<div class="mainInfo__info__about__point txt">
-						<div class="mainInfo__info__about__point__key">Издатель:</div>
-						<a href="#" class="mainInfo__info__about__point__value mainInfo__info__about__point__value_link txt" id="game_publisher">Gaijin Network Ltd</a>
+					<div class="mainInfo__info__about">
+						<div class="mainInfo__info__about__point txt">
+							<div class="mainInfo__info__about__point__key">Дата выхода:</div>
+							<div class="mainInfo__info__about__point__value" id="game_date">15 авг. 2013 г.</div>
+						</div>
+						<div class="mainInfo__info__about__point txt">
+							<div class="mainInfo__info__about__point__key">Разработчик:</div>
+							<a href="#" class="mainInfo__info__about__point__value mainInfo__info__about__point__value_link txt" id="game_developer">Gaijin Entertainment</a>
+						</div>
+						<div class="mainInfo__info__about__point txt">
+							<div class="mainInfo__info__about__point__key">Издатель:</div>
+							<a href="#" class="mainInfo__info__about__point__value mainInfo__info__about__point__value_link txt" id="game_publisher">Gaijin Network Ltd</a>
+						</div>
 					</div>
 				</div>
             </div>
