--- a/catalog.html
+++ b/catalog.html
@@ -228,7 +228,7 @@
 						<div class="inputList" id="inputList-sorting">
 							<input class="txt" type="text" name="inp-sorting" title="inp-sorting" value="Жанрыни5тгт" id="inp-sorting">
 							<div class="inputList__list">
-								<div class="inputList__list__header" onclick="toggle_list('sorting')">
+								<div class="inputList__list__header">
 									<div class="inputList__list__header__title txt">Сортировка</div>
 									<!-- <div class="inputList__list__header__values txt"></div> -->
 									<div class="inputList__list__header__bg">
