--- a/game.html
+++ b/game.html
@@ -226,10 +226,7 @@
                 <div class="miniGameCard__right__button miniGameCard__right__button_basket">
                     <img src="img/icons/main/basket64_2.png" alt="">
                 </div>
-                <div class="miniGameCard__right__buttonBuy txt">
-                    <div class="miniGameCard__right__buttonBuy__text -text txt">Купить</div>
-                    <div class="miniGameCard__right__buttonBuy__forHover -forHover"></div>
-                </div>
+                <div class="miniGameCard__right__buttonBuy txt">Купить</div>
             </div>
         </div>
 	</header>
@@ -266,7 +263,7 @@
             <img src="" alt="" id="game_banner">
 			<!-- <div class="bigImgBlock__title txt" id="game_title_top"></div> -->
         </div>
-        <div class="mainInfo">
+        <div class="mainInfo" id="main_info">
 			<div class="mainInfo__left">
 				<div class="mainInfo__title txt" id="game_title"></div>
 				<div class="mainInfo__banner mainInfo__banner_loading loadingContent">
