--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 	<div class="blackoutBlock fixed-zero" onclick="open_catalogNavs()"></div>
 	
 	<main id="main">
-		<div class="inner">
+		<div class="inner inner_index">
 			<section class="carousel">
 				<h2 class="hidden">Карусель</h2>
 				<div class="carousel__gridBG" id="carousel_grid_bg"></div>
@@ -264,148 +264,7 @@
 						<img src="img/icons/main/arrRight32.png" alt="">
 					</button>
 				</div>
-				<div class="carousel__grid" id="grid_banners">
-					<!-- <div class="carousel__banner carousel__banner_1">
-						<div class="carousel__banner__imgBlock">
-							<img src="img/banners/image 10.png" alt="">
-						</div>
-						<div class="carousel__banner__interaction">
-							<div class="carousel__banner__interaction__info">
-								<a href="#1" class="carousel__banner__interaction__info__link"></a>
-								<div class="carousel__banner__interaction__info__title txt">Call Of Duty: Warzone 2</div>
-								<div class="carousel__banner__interaction__info__shopInfo">
-									<div class="carousel__banner__interaction__info__shopInfo__buttons">
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_basket">
-											<img src="img/icons/basket32.png" alt="">
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_favorite">
-											<img src="img/icons/heart32.png" alt="">
-										</div>
-									</div>
-									<div class="carousel__banner__interaction__info__shopInfo__priceTag">
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices">
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__newPrice txt">3290 ₽</div>
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__oldPrice txt">3990 ₽</div>
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__discount flex-center txt">15%</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="carousel__banner carousel__banner_2">
-						<div class="carousel__banner__imgBlock">
-							<img src="img/banners/big.png" alt="">
-						</div>
-						<div class="carousel__banner__interaction">
-							<div class="carousel__banner__interaction__info">
-								<a href="#2" class="carousel__banner__interaction__info__link"></a>
-								<div class="carousel__banner__interaction__info__title txt">Call Of Duty: Warzone 2</div>
-								<div class="carousel__banner__interaction__info__shopInfo">
-									<div class="carousel__banner__interaction__info__shopInfo__buttons">
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_basket">
-											<img src="img/icons/basket32.png" alt="">
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_favorite">
-											<img src="img/icons/heart32.png" alt="">
-										</div>
-									</div>
-									<div class="carousel__banner__interaction__info__shopInfo__priceTag">
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices">
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__newPrice txt">3290 ₽</div>
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__oldPrice txt">3990 ₽</div>
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__discount flex-center txt">15%</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="carousel__banner carousel__banner_3">
-						<div class="carousel__banner__imgBlock">
-							<img src="img/banners/b3.jpg" alt="">
-						</div>
-						<div class="carousel__banner__interaction">
-							<div class="carousel__banner__interaction__info">
-								<a href="#" class="carousel__banner__interaction__info__link"></a>
-								<div class="carousel__banner__interaction__info__title txt">Call Of Duty: Warzone 2</div>
-								<div class="carousel__banner__interaction__info__shopInfo">
-									<div class="carousel__banner__interaction__info__shopInfo__buttons">
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_basket">
-											<img src="img/icons/basket32.png" alt="">
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_favorite">
-											<img src="img/icons/heart32.png" alt="">
-										</div>
-									</div>
-									<div class="carousel__banner__interaction__info__shopInfo__priceTag">
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices">
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__newPrice txt">3290 ₽</div>
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__oldPrice txt">3990 ₽</div>
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__discount flex-center txt">15%</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="carousel__banner carousel__banner_4">
-						<div class="carousel__banner__imgBlock">
-							<img src="img/banners/b4.jpg" alt="">
-						</div>
-						<div class="carousel__banner__interaction">
-							<div class="carousel__banner__interaction__info">
-								<a href="#" class="carousel__banner__interaction__info__link"></a>
-								<div class="carousel__banner__interaction__info__title txt">Call Of Duty: Warzone 2</div>
-								<div class="carousel__banner__interaction__info__shopInfo">
-									<div class="carousel__banner__interaction__info__shopInfo__buttons">
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_basket">
-											<img src="img/icons/basket32.png" alt="">
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_favorite">
-											<img src="img/icons/heart32.png" alt="">
-										</div>
-									</div>
-									<div class="carousel__banner__interaction__info__shopInfo__priceTag">
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices">
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__newPrice txt">3290 ₽</div>
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__oldPrice txt">3990 ₽</div>
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__discount flex-center txt">15%</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="carousel__banner carousel__banner_5">
-						<div class="carousel__banner__imgBlock">
-							<img src="img/banners/b5.jpg" alt="">
-						</div>
-						<div class="carousel__banner__interaction">
-							<div class="carousel__banner__interaction__info">
-								<a href="#" class="carousel__banner__interaction__info__link"></a>
-								<div class="carousel__banner__interaction__info__title txt">Call Of Duty: Warzone 2</div>
-								<div class="carousel__banner__interaction__info__shopInfo">
-									<div class="carousel__banner__interaction__info__shopInfo__buttons">
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_basket">
-											<img src="img/icons/basket32.png" alt="">
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__buttons__button carousel__banner__interaction__info__shopInfo__buttons__button_favorite">
-											<img src="img/icons/heart32.png" alt="">
-										</div>
-									</div>
-									<div class="carousel__banner__interaction__info__shopInfo__priceTag">
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices">
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__newPrice txt">3290 ₽</div>
-											<div class="carousel__banner__interaction__info__shopInfo__priceTag__prices__oldPrice txt">3990 ₽</div>
-										</div>
-										<div class="carousel__banner__interaction__info__shopInfo__priceTag__discount flex-center txt">15%</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div> -->
-				</div>
+				<div class="carousel__grid" id="grid_banners"></div>
 				
 			</section>
 			<section class="salesHits salesHits_loading loadingContent" id="salesHits">
