--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
 	<script type="text/javascript" src="scripts/cookie.js"></script>
 	<script type="text/javascript" src="scripts/lists.js"></script>
 	<script type="text/javascript" src="elements/elements.js"></script>
+	<script type="text/javascript" src="scripts/color-thief.min.js"></script>
 	<script type="text/javascript" src="scripts/makeContentFunctions.js"></script>
 	<script type="text/javascript" src="scripts/carousel.js"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
