--- a/profile.html
+++ b/profile.html
@@ -417,10 +417,7 @@
                     <div class="settings__right">
                         <div class="settings__buttons">
                             <button class="settings__buttons__button settings__buttons__button_back txt" type="button">Отменить</button>
-                            <button class="settings__buttons__button settings__buttons__button_save">
-                                <div class="-text txt">Сохранить</div>
-                                <div class="-forHover absolute-zero"></div>
-                            </button>
+                            <button class="settings__buttons__button settings__buttons__button_save txt">Сохранить</button>
                         </div>
                     </div>
                 </form>
